@@ -87,7 +87,7 @@ CODE
 	foreach my $widget ( @{ $_->{widgets} } ) {
 	    if( $widget->{type} eq "Combo" ) {
 		print <<"CODE";
-int option_enumerate_$_->{name}_$widget->{value}();
+int option_enumerate_$_->{name}_$widget->{value}( void );
 
 CODE
 	    }
